add image to database

--- a/code/index.html
+++ b/code/index.html
@@ -11,13 +11,15 @@
     <script src="app.js"></script>
 </head>
 
-<body>
-    <h1>Product List</h1>
+<body >
+    <div style="background-image: url('dankint.jpg');">
+    <h1>stan fai la lista</h1>
     <div id="table">
         <div class="table-row">
             <div id="table-header">
-                <div class="table-header-cell">Prodotto</div>
-                <div class="table-header-cell">Prezzo</div>
+                <div class="table-header-cell">PRODOTTO</div>
+                <div class="table-header-cell">CODICE A BARRE</div>
+                <div class="table-header-cell">immagine</div>
             </div>
             <div id="table-body">
             </div>
